Always display body scrollbar to stop load jitter

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,6 @@
 body {
     background: url(/img/bg.png);
+    overflow-y: scroll;
 }
 .main {
     padding-top: 20px;
